[gd_scene load_steps=5 format=3 uid="uid://3bhcc2uoplpr"]

[ext_resource type="Script" path="res://scripts/tower/support_tower.gd" id="1_72uyl"]

[sub_resource type="Shader" id="Shader_lh0kh"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 line_color : source_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vk0g0"]
resource_local_to_scene = true
shader = SubResource("Shader_lh0kh")
shader_parameter/line_color = Color(1, 1, 1, 0)
shader_parameter/line_thickness = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6ffrc"]
resource_local_to_scene = true

[node name="SupportTower" type="Node2D" node_paths=PackedStringArray("sprite", "support_col_shape", "place_col_shape", "range_indicator")]
script = ExtResource("1_72uyl")
sprite = NodePath("Sprite2D")
support_col_shape = NodePath("SupportArea/CollisionShape2D")
place_col_shape = NodePath("PlaceArea/CollisionShape2D")
range_indicator = NodePath("RangeIndicator")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vk0g0")
scale = Vector2(1.5, 1.5)

[node name="SupportArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SupportArea"]
shape = SubResource("CircleShape2D_6ffrc")

[node name="PlaceArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceArea"]

[node name="RangeIndicator" type="Polygon2D" parent="."]
visible = false

[connection signal="area_entered" from="SupportArea" to="." method="_on_support_area_entered"]
[connection signal="area_exited" from="SupportArea" to="." method="_on_support_area_exited"]
[connection signal="input_event" from="PlaceArea" to="." method="_on_place_area_input_event"]
